--- a/v4.4.1/scss/_jumbotron.scss
+++ b/v4.4.1/scss/_jumbotron.scss
@@ -4,6 +4,7 @@
   color: $jumbotron-color;
   background-color: $jumbotron-bg;
   @include dos-solid-border($grayLight, 1);
+  @include dos-uncollapse-margin();
 
   // this is a crazy hack ... hopefully people will enjoy it.
   .display-4 {
