--- a/v4.4.1/scss/_list-group.scss
+++ b/v4.4.1/scss/_list-group.scss
@@ -8,7 +8,8 @@
 
   // No need to set list-style: none; since .list-group-item is block level
   margin-bottom: 0;
-  @include dos-border-single($grayLight, $character-space: 0);
+  @include dos-border-single($grayLight);
+  @include dos-uncollapse-margin();
 }
 
 
