--- a/v4.4.1/scss/_type.scss
+++ b/v4.4.1/scss/_type.scss
@@ -24,6 +24,7 @@ h2, .h2 {
 h3, .h3 {
   color: $white;
   @include dos-border-single($white, $character-space: 1);
+  @include dos-uncollapse-margin();
 }
 h4, .h4 {
   color: $white;
